framec_tests/language_specific/c/v3_outline/negative/header_outside_section.frm
@target c

system S {
    bad() {
        // body
    }
}

